--- a/OWO_H3VR.csproj
+++ b/OWO_H3VR.csproj
@@ -58,7 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Communication.cs" />
+    <Compile Include="OWOSDK.cs" />
     <Compile Include="OWOSkin.cs" />
     <Compile Include="OWO_H3VR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
